k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-k8s-app-deployment
  labels:
    app: test-k8s-app
spec:
  replicas: 2 # 跑兩個副本，達成高可用性
  selector:
    matchLabels:
      app: test-k8s-app
  template:
    metadata:
      labels:
        app: test-k8s-app
    spec:
      containers:
      - name: test-k8s-app-container
        # 這裡填入你 Artifact Registry 裡的 Image 路徑
        image: asia-east1-docker.pkg.dev/test-k8s-app-492717/test-k8s-app-repo/my-app:v1
        ports:
        - containerPort: 3000 # 你的程式監聽的 Port
