k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-k8s-app-frontend-RESOURCE_SUFFIX-service
spec:
  selector:
    app: test-k8s-app-frontend-RESOURCE_SUFFIX # 必須對應到 Deployment 的 labels
    tier: frontend
  ports:
    - protocol: TCP
      port: 80       # Service 對外開啟的 Port
      targetPort: 3000 # 導向 Pod 內部的 Port
  type: NodePort # 在 GKE Autopilot 中，這是最基礎的連通方式
