k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  test-k8s-app-RESOURCE_SUFFIX-ingress
  namespace: RESOURCE_SUFFIX
  annotations:
    kubernetes.io/ingress.class: "gce" # 告訴 GKE 使用 Google Cloud 的外部負載平衡器
    kubernetes.io/ingress.global-static-ip-name: "STATIC_IP_NAME" # 這裡會被 deploy.yml 替換成 test-k8s-static-ip-prod/uat/dev
    networking.gke.io/v1beta1.FrontendConfig: "ssl-redirect-config" # 連結 frontend-config
    networking.gke.io/managed-certificates: "test-k8s-app-frontend-RESOURCE_SUFFIX-cert" # 連結 certificate
    kubernetes.io/ingress.allow-http: "true" # 必須設為 true，ssl導向才會生效
spec:
  ingressClassName: gce
  rules:
  - host: DOMAIN_NAME_PLACEHOLDER  # 前端網域
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-k8s-app-frontend-RESOURCE_SUFFIX-service
            port:
              number: 80
  # - host: api.DOMAIN_NAME_PLACEHOLDER    # 後端網域
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: test-k8s-app-backend-RESOURCE_SUFFIX-service
  #           port:
  #             number: 80
